haskell-debian (3.60) unstable; urgency=low

  * Replace bogus Show instances in Debian.Relation.Common with pretty
    printing functions.

 -- David Fox <dsf@seereason.com>  Sun, 25 Sep 2011 07:33:25 -0700

haskell-debian (3.59) unstable; urgency=low

  * Move the cabal-debian program into a separate pacakge.

 -- David Fox <dsf@seereason.com>  Sun, 18 Sep 2011 06:43:36 -0700

haskell-debian (3.58-0.2) unstable; urgency=low

  * Remove the --deb-name option, all the package name special cases need
    to be encoded in the Distribution.Package.Debian.Bundled.debianName function
    so that we can fix both the names for the package we are building and
    the names of its dependencies.

 -- David Fox <dsf@seereason.com>  Thu, 25 Aug 2011 10:58:11 -0700

haskell-debian (3.58-0.1) unstable; urgency=low

  * Add --deb-name option, which sets the part of the package name between
    the prefix libghc- and the suffix -dev.
  * Add --epoch
  * Add --deb-version

 -- David Fox <dsf@seereason.com>  Wed, 24 Aug 2011 20:45:33 -0700

haskell-debian (3.58) unstable; urgency=low

  * Add a --ghc-version option to specify what the ghc version is in the
    build environment, in case it is different from the one where the
    autobuilder is being run.  This affects what packages cabal-debian
    thinks are built into the compiler.  I have non-working code to actually
    look in the environment for this information, but it depends on having
    the compiler already installed there.
  * Greatly sped-up cabal-debian.
  * Add --build-dep to specify extra build dependencies.
  * Generate a haskell-packagename-utils deb with all the executables, rather
    than one deb per executable.

 -- David Fox <dsf@seereason.com>  Fri, 19 Aug 2011 08:34:36 -0700

haskell-debian (3.57) unstable; urgency=low

  * Re-order generated dependencies so we are more likely to build
    with newer packages installed.

 -- David Fox <dsf@seereason.com>  Tue, 16 Aug 2011 19:04:29 -0700
