@@ -32,7 +32,7 @@ data ChangesFile =
             , changeInfo :: S.Paragraph		-- ^ The contents of the .changes file
             , changeEntry :: ChangeLogEntry	-- ^ The value of the Changes field of the .changes file
             , changeFiles :: [ChangedFileSpec]	-- ^ The parsed value of the Files attribute
-            } deriving (Eq, Show)
+            } deriving (Eq)
 
 -- |An entry in the list of files generated by the build.
 data ChangedFileSpec =
@@ -56,7 +56,7 @@ data ChangeLogEntry =
           , logDate :: String
           }
   | WhiteSpace String
-  deriving (Eq, Show)
+  deriving (Eq)
 
 {-
 instance Show ChangesFile where
@@ -65,7 +65,7 @@ instance Show ChangesFile where
 
 changesFileName :: ChangesFile -> String
 changesFileName changes =
-    changePackage changes ++ "_" ++ show (changeVersion changes) ++ "_" ++ archName (changeArch changes) ++ ".changes"
+    changePackage changes ++ "_" ++ show (prettyDebianVersion (changeVersion changes)) ++ "_" ++ archName (changeArch changes) ++ ".changes"
 
 prettyChangesFile :: ChangesFile -> Doc
 prettyChangesFile = text . changesFileName
@@ -79,13 +79,13 @@ prettyChanges file =
           changedFileName file)
 
 prettyEntry (Entry package version dists urgency details who date) =
-    text (package ++ " (" ++ show version ++ ") " ++ intercalate " " (map releaseName' dists) ++ "; urgency=" ++ urgency ++ "\n\n" ++
+    text (package ++ " (" ++ show (prettyDebianVersion version) ++ ") " ++ intercalate " " (map releaseName' dists) ++ "; urgency=" ++ urgency ++ "\n\n" ++
           details ++ " -- " ++ who ++ "  " ++ date ++ "\n\n")
 
 -- |Show just the top line of a changelog entry (for debugging output.)
 showHeader :: ChangeLogEntry -> Doc
 showHeader (Entry package version dists urgency _ _ _) =
-    text (package ++ " (" ++ show version ++ ") " ++ intercalate " " (map releaseName' dists) ++ "; urgency=" ++ urgency ++ "...")
+    text (package ++ " (" ++ show (prettyDebianVersion version) ++ ") " ++ intercalate " " (map releaseName' dists) ++ "; urgency=" ++ urgency ++ "...")
 
 {-
 format is a series of entries like this:
