@@ -2,6 +2,7 @@
 -- numbers. <http://www.debian.org/doc/debian-policy/ch-controlfields.html#s-f-Version>
 module Debian.Version 
     (DebianVersion -- |Exported abstract because the internal representation is likely to change 
+    , prettyDebianVersion
     , parseDebianVersion
     , epoch
     , version
