@@ -26,7 +26,8 @@ Build-Depends: debhelper (>= 7)
   , libghc-network-dev
   , libghc-network-prof
   , libghc-utf8-string-dev
-  , libghc-utf8-string-prof
+  , libghc-utf8-string-prof,
+  , libcrypto++-dev
 Build-Depends-Indep: ghc-doc
   , libghc-mtl-doc
   , libghc-parsec3-doc
